<resources>
    <string name="app_name">PieR</string>
    <string name="title_activity_settings">Pier</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="logins">Login</string>
    <string name="welcome_to_pier">Welcome to Pier</string>

    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>

    <string name="groceries">Groceries</string>
    <string name="transport">Transport</string>
    <string name="bills">Bills</string>
    <string name="rent">Rent</string>
    <string name="unknown">unknown</string>
    <string name="day_of_the_month">23</string>
    <string name="month">JAN</string>

    <string name="november">N/A</string>
    <string name="december">N/A </string>
    <string name="january">N/A</string>
    <string name="february">N/A</string>
    <string name="october">N/A</string>
    <string name="september">N/A</string>

    <string name="amount">$30</string>
    <string name="brand">Tesco</string>
    <string name="date">1/10/2017</string>
    <string name="tag_message">Please select the adequate TAG for this payment</string>
    <string name="tag_description">tag_image</string>

    <string name="groceriesTag">Groceries</string>
    <string name="rentTag">Rent</string>
    <string name="tfl">Tfl</string>
    <string name="billsTag">Bills</string>
    <string name="shopping">Shopping</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="desc_welcome">your persona money sever App</string>
    <string name="welcome_i_am_pier">Welcome I am PieR</string>
    <string name="start">START TOUR</string>
    <string name="slide_one_text">Catagorise your spending to keep tabs on where your hard earned money ends up.</string>
    <string name="slite_two_text">Using machine learning techniques, our app will create a predictive model based on your income and expenditure so you don\'t have to worry about working out if you can afford to get the next round in.</string>
    <string name="next">Next</string>
    <string name="blanck" />
    <string name="slide_title1">Categorize</string>
    <string name="slide_title2">Machine Learning</string>
    <string name="slide_title3">Plugins</string>
    <string name="slide_three_text">We also offer a range of additional plugins that show you where and how you can save on everything from groceries to rent.</string>

    <string name="type">Spending Type</string>
    <string name="money">20</string>
    <string name="title_activity_authenticator">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="green_light_message">Spending not too much money</string>
    <string name="yellow_light_message">Be carefull on how much money you spend</string>
    <string name="red_light_message">Spending way too much money</string>

    <string name="notification_message">You will recieve notifications every month to update the applcation by uploading a new csv file.</string>
</resources>
