<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:weightSum="100"
        android:background="@color/colorWhite"
        android:layout_marginTop="12dp"
        >

        <TextView
            android:id="@+id/textViewTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/amount"
            android:textSize="40sp"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textViewTransactionBrand"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/brand"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/textViewTransactionDate"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:text="@string/date"
                android:textSize="13sp"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnForTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tag_icon"
            android:background="@color/red"
            android:layout_weight="5"
            android:contentDescription="@string/tag_description"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/textViewTagMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_message"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorWhite"/>

</LinearLayout>