<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="100">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="@color/white"
            android:contentDescription="@string/left_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@color/white"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/february"
            android:textColor="@color/light_black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnGoToPrevious1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="@color/white"
            android:contentDescription="@string/right_arrow"
            android:src="@drawable/rigth_arrow" />

    </LinearLayout>

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>