<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="100">

        <ImageButton
            android:id="@+id/btnGoToPrevious1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/left_arrow"
            android:background="@color/colorWhite"
            android:contentDescription="@string/left_arrow"
            android:layout_weight="20"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:text="@string/december"
            android:gravity="center"
            android:background="@color/colorWhite"
            android:textSize="20sp"
            />

        <ImageButton
            android:id="@+id/btnGoToPrevious3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/rigth_arrow"
            android:background="@color/colorWhite"
            android:contentDescription="@string/right_arrow"
            android:layout_weight="20"/>

    </LinearLayout>

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>