<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:baselineAligned="false"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="60"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/textViewBrandName"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/groceries"
            android:textSize="18sp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/textViewTagName"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/unknown"
            android:textSize="18sp"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="22"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_border_for_transactions">

        <TextView
            android:id="@+id/textViewAmountOfTheTransaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="£120"
            android:gravity="center"
            android:textSize="25sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="18"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/textViewDayOfTheMonth"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/day_of_the_month"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/textViewMonth"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="center"
            android:text="@string/month"
            android:textSize="13sp"/>

    </LinearLayout>


</LinearLayout>