<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/NoActionBar"
    android:background="@drawable/welcome_bg"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:text="@string/welcome_i_am_pier" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:textSize="17sp"
                android:layout_marginBottom="20dp"
                android:text="@string/desc_welcome"/>
            <Button
                android:id="@+id/skipTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button_r"
                android:textSize="18sp"
                android:textColor="@color/light_blue"
                android:text="LOG IN"/>
            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/light_blue_button_r"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/start"/>

        </LinearLayout>

    </LinearLayout>

</android.widget.LinearLayout>